v0.17.0/_sources/_generated/groups/kernels.rst.txt
Kernels
=======

This section details Kernel-related Linode CLI commands.

.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON
.. _commands_kernels_list:

`list <https://techdocs.akamai.com/linode-api/reference/get-kernels>`_
----------------------------------------------------------------------


Lists available Kernels.

.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Sample

.. rst-class:: action-subheading-description

Examples of how this command might be used.




..  code-block:: bash

    linode-cli kernels list






.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Filterable Attributes

.. rst-class:: action-subheading-description

Arguments used to define a filter for response entries.




.. rst-class:: action-filterable-field-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 98

    * - Name
      - Type
      - Description

    * - :action-table-field-name:`\-\-architecture`
      - :action-table-field-type:`str`
      - The architecture of this Kernel.

    * - :action-table-field-name:`\-\-deprecated`
      - :action-table-field-type:`bool`
      - If this Kernel is marked as deprecated, this field has a value of true; otherwise, this field is false.

    * - :action-table-field-name:`\-\-kvm`
      - :action-table-field-type:`bool`
      - If this Kernel is suitable for KVM Linodes.

    * - :action-table-field-name:`\-\-label`
      - :action-table-field-type:`str`
      - The friendly name of this Kernel.

    * - :action-table-field-name:`\-\-pvops`
      - :action-table-field-type:`bool`
      - If this Kernel is suitable for paravirtualized operations.

    * - :action-table-field-name:`\-\-version`
      - :action-table-field-type:`str`
      - Linux Kernel version.






.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Result Attributes

.. rst-class:: action-subheading-description

The attributes returned by this command.




.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`architecture` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`x86_64`
      - The architecture of this Kernel.

    * - :action-table-field-name:`built` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`2018-01-01T00:01:01`
      - The date on which this Kernel was built.

    * - :action-table-field-name:`deprecated` 
      - :action-table-field-type:`bool`
      - :action-table-field-example:`N/A`
      - If this Kernel is marked as deprecated, this field has a value of true; otherwise, this field is false.

    * - :action-table-field-name:`id` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`linode/latest-64bit`
      - The unique ID of this Kernel.

    * - :action-table-field-name:`kvm` 
      - :action-table-field-type:`bool`
      - :action-table-field-example:`true`
      - If this Kernel is suitable for KVM Linodes.

    * - :action-table-field-name:`label` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`Latest 64 bit...4-linode102)`
      - The friendly name of this Kernel.

    * - :action-table-field-name:`pvops` 
      - :action-table-field-type:`bool`
      - :action-table-field-example:`N/A`
      - If this Kernel is suitable for paravirtualized operations.

    * - :action-table-field-name:`version` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`4.15.7`
      - Linux Kernel version.









.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON
.. _commands_kernels_view:

`view <https://techdocs.akamai.com/linode-api/reference/get-kernel>`_
---------------------------------------------------------------------


Returns information about a single Kernel.

.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Sample

.. rst-class:: action-subheading-description

Examples of how this command might be used.




..  code-block:: bash

    linode-cli kernels view latest-64bit




.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Parameters

.. rst-class:: action-subheading-description

Positional parameters used to define the resource this command should target.




.. rst-class:: action-parameter-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 98

    * - Name
      - Type
      - Description

    * - :action-table-field-name:`kernelId`
      - :action-table-field-type:`str`
      - ID of the Kernel to look up.








.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Result Attributes

.. rst-class:: action-subheading-description

The attributes returned by this command.




.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`architecture` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`x86_64`
      - The architecture of this Kernel.

    * - :action-table-field-name:`built` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`2018-01-01T00:01:01`
      - The date on which this Kernel was built.

    * - :action-table-field-name:`deprecated` 
      - :action-table-field-type:`bool`
      - :action-table-field-example:`N/A`
      - If this Kernel is marked as deprecated, this field has a value of true; otherwise, this field is false.

    * - :action-table-field-name:`id` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`linode/latest-64bit`
      - The unique ID of this Kernel.

    * - :action-table-field-name:`kvm` 
      - :action-table-field-type:`bool`
      - :action-table-field-example:`true`
      - If this Kernel is suitable for KVM Linodes.

    * - :action-table-field-name:`label` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`Latest 64 bit...4-linode102)`
      - The friendly name of this Kernel.

    * - :action-table-field-name:`pvops` 
      - :action-table-field-type:`bool`
      - :action-table-field-example:`N/A`
      - If this Kernel is suitable for paravirtualized operations.

    * - :action-table-field-name:`version` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`4.15.7`
      - Linux Kernel version.









